--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: bisque;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main {
+  margin: 10px;
+  padding: 10px;
+  background-color: burlywood;
+  border-radius: 10px;
+  border: 3px solid white;
+}
+
+.link {
+  background-color: violet;
+  margin: 5px;
+  padding: 5px;
+  text-decoration: none;
+  border-radius: 10px;
+}
+
+.link:hover {
+  background-color: white;
+}
+
+.active {
+  background-color: tomato;
+  font-weight: bold;
+  color: red;
+}
+
+li {
+  margin: 10px;
 }
